# investment-strategy

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: fundamental-analyst.md  macro-regime.md  news-scanner.md  performance-evaluator.md  quant-modeler.md  rebalancing-tax.md  red-team.md  risk-concentration.md
.claude/commands/: audit-trail.md  daily-cycle.md  ingest-lightyear-csv.md  modelo-720-check.md  onboarding.md  performance-report.md  rebalance-propose.md  tesis-new.md  tesis-review.md
dashboard/: README.md  app.py  auth.py  requirements.txt  styles.py
dashboard/.streamlit/: config.toml  secrets.toml.template
dashboard/components/: comparative.py  market_status.py  multi_portfolio_chart.py  news_feed.py  portfolio_summary.py  recommendations.py  tax_alerts.py
dashboard/data/: cerebro_state.example.json  cerebro_state.json  dashboard_bundle.json  snapshot_real_latest.json
dashboard/pages/: 11_Claude_Autonomous.py  1_Home.py  2_Cartera.py  3_Detalle.py  5_Comparativa.py  6_Mercado.py  7_Trades.py  8_Tesis.py  9_Fiscal.py
dashboard/services/: cerebro_state.py  events_reader.py  fiscal_reader.py  portfolio_reader.py  position_reader.py  price_log_reader.py  snapshot_reader.py  thesis_browser.py  thesis_reader.py
dashboard/styles/: __init__.py  palette.py
dashboard/tests/: test_auth.py  test_components.py
scripts/: auto_commit_cerebro.bat  backup_nightly.py  fundamentals_analyst.py  generate_cerebro_state.py  install_auto_commit_tasks.ps1  install_daily_task.ps1  llm_chat.py  llm_narratives.py  mercado_ai.py  news_scanner.py  notifications.py  run_claude_autonomous_daily.bat  run_claude_autonomous_daily.py  run_daily_cerebro.bat  run_daily_news_scanner.bat  run_daily_reflections.bat  run_daily_reflections.py  run_nightly_backup.bat  run_weekly_debates.bat  run_weekly_debates.py  technical_analyst.py  trade_ingest.py
scripts/agents/: __init__.py  bear_researcher.py  bull_researcher.py  claude_autonomous.py  claude_autonomous_reflection.py  debate_facilitator.py  debate_trigger.py  graph.py  reflection.py  risk_manager.py
scripts/alpaca/: __init__.py  client.py
scripts/benchmarks/: __init__.py  indexa_benchmark.py  spy_benchmark.py
scripts/metrics/: __init__.py  risk_adjusted.py
scripts/portfolios/: __init__.py  claude_autonomous_snapshot.py  hrp_portfolio.py
src/portfolios/: price_log.py  snapshot.py
tests/: test_alpaca_client.py  test_backup.py  test_benchmarks.py  test_bull_bear_debate.py  test_cerebro_generator.py  test_claude_autonomous.py  test_comparativa_page.py  test_detalle_page.py  test_fiscal_reader.py  test_fundamentals_analyst.py  test_hrp_portfolio.py  test_llm_chat.py  test_llm_narratives.py  test_mercado_ai.py  test_news_scanner.py  test_notifications.py  test_pii_safety.py  test_portfolio_reader.py  test_portfolio_rotation.py  test_price_log.py  test_prompt_caching.py  test_reflection.py  test_risk_manager.py  test_risk_metrics.py  test_smoke_dashboard.py  test_snapshot_rebuilder.py  test_technical_analyst.py  test_thesis_browser.py  test_trade_ingest_manual.py  test_universe_scanner.py
